changed evolve method to fix sorting issue